# jaitnipat-portfolio

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  index.html  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  docker.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: certificates-section.tsx  contact-section.tsx  experience-section.tsx  hero-section.tsx  layout-shell.tsx  project-card.tsx  project-filters.tsx  projects-section.tsx  site-header.tsx  skills-section.tsx  theme-toggle.tsx
app/lib/: data.ts
backend/: .env.example  Dockerfile
backend/src/: main.rs
backend/src/models/: portfolio.rs
backend/src/routes/: health.rs
backend/src/services/: mod.rs  portfolio_service.rs
backend/tests/: integration.rs
frontend/: Dockerfile  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: main.ts
frontend/src/pwa/: manifest.ts  service-worker.ts
frontend/src/router/: index.ts
infra/nginx/: nginx.conf
legacy/backend/: Cargo.toml  Dockerfile
legacy/backend/src/: config.rs
legacy/backend/src/db/: mod.rs
legacy/backend/src/routes/: mod.rs  portfolio.rs
legacy/frontend/: .eslintrc.cjs  index.html  tsconfig.app.json
scripts/: main.js
src/: App.tsx  data.ts  index.css
src/components/: CertificatesSection.tsx  ContactSection.tsx  ExperienceSection.tsx  HeroSection.tsx  LayoutShell.tsx  ProjectCard.tsx  ProjectFilters.tsx  ProjectsSection.tsx  SiteHeader.tsx  SkillsSection.tsx  ThemeToggle.tsx
styles/: main.css
(+12 files in other folders)
